...
    <variable
        name="song"
        type="com.example.domain.entity.Song"
        />
  </data>
  <androidx.constraintlayout.motion.widget.MotionLayout
      android:id="@+id/motionLayout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layoutDescription="@xml/activity_home_xml_constraintlayout2_scene"
      tools:context=".ui.home.HomeActivity"
      >
    <fragment
...
